tests/snapshots/snapshot__120x40_with_pairs.snap
---
source: tests/snapshot.rs
assertion_line: 105
expression: "render_pane(&pane, 120, 40)"
---
┌ Subtitles ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│[SRC] Welcome to the meeting. Let us begin with the agenda.                                                           │
│[TGT] 会 議 へ よ う こ そ 。 ア ジ ェ ン ダ か ら 始 め ま し ょ う 。                                                                     │
│──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│[SRC] First item: quarterly review.                                                                                   │
│[TGT] 最 初 の 議 题 ： 四 半 期 レ ビ ュ ー 。                                                                                     │
│──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│[SRC] Second item: product roadmap for the next two years.                                                            │
│[TGT] 二 番 目 の 議 题 ： 次 の 二 年 間 の 製 品 ロ ー ド マ ッ プ 。                                                                     │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
