tests/snapshots/snapshot__200x50_with_pairs.snap
---
source: tests/snapshot.rs
assertion_line: 131
expression: "render_pane(&pane, 200, 50)"
---
┌ Subtitles ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│[SRC] Good morning everyone. Today we will discuss the quarterly financial results in detail.                                                                                                         │
│[TGT] お は よ う ご ざ い ま す 。 本 日 は 四 半 期 の 財 務 結 果 に つ い て 詳 し く 話 し 合 い ま す 。                                                                                                                           │
│──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│[SRC] Revenue was up fifteen percent compared to the same period last year.                                                                                                                           │
│[TGT] 売 上 高 は 前 年 同 期 比 で 15パ ー セ ン ト 増 加 し ま し た 。                                                                                                                                                   │
│──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│[SRC] We expect continued growth in the coming months driven by new product launches.                                                                                                                 │
│[TGT] 新 製 品 の 発 射 に よ り 、 今 後 数 ヶ 月 も 継 続 的 な 成 長 が 見 込 ま れ ま す 。                                                                                                                                     │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
