tests/snapshots/snapshot__80x24_after_final_promotion.snap
---
source: tests/snapshot.rs
expression: "render_pane(&pane, 80, 24)"
---
┌ Subtitles ───────────────────────────────────────────────────────────────────┐
│[SRC] Final committed result                                                  │
│[TGT] Kết quả cuối cùng đã xác nhận                                           │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
