tests/snapshots/snapshot__80x24_long_line_wraps.snap
---
source: tests/snapshot.rs
assertion_line: 79
expression: "render_pane(&pane, 80, 24)"
---
┌ Subtitles ───────────────────────────────────────────────────────────────────┐
│[SRC] This is a very long source line that should definitely wrap at the termi│
│      nal boundary here.                                                      │
│[TGT] These are the translated words that also need to wrap around the termina│
│      l width boundary.                                                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
