tests/snapshots/snapshot__80x24_partial_only.snap
---
source: tests/snapshot.rs
expression: "render_pane(&pane, 80, 24)"
---
┌ Subtitles ───────────────────────────────────────────────────────────────────┐
│[SRC…] First partial line only                                                │
│[TGT…] Dòng tạm thời đầu tiên                                                 │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
